Added diagrams and updated labels

--- a/docs/large-device-fleet/differences-trial-production.mdx
+++ b/docs/large-device-fleet/differences-trial-production.mdx
@@ -1,6 +1,6 @@
 ---
 id: differences-trial-production
-sidebar_label: Differences in a trial vs production
+sidebar_label: Trial vs production differences
 ---
 
 
