--- a/docs/large-device-fleet/helium-lorawan-concepts.mdx
+++ b/docs/large-device-fleet/helium-lorawan-concepts.mdx
@@ -1,3 +1,8 @@
+---
+id: helium-lorawan-concepts
+sidebar_label: Helium network concepts
+---
+
 # Helium and LoRaWAN network server concepts
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
@@ -8,3 +13,18 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 * **Validators** - These are servers that run the blockchain to offload computation and storage from the hotspots. In the future, hotspots will not have a copy of the blockchain but will communicate to the validators to perform blockchain transactions.
 * **Helium Router/LoRaWAN Network Server** - Router is equivalent to a LoRaWAN Network Server (LNS). LNS manages low level network communications with devices through hotspots. By running your own LNS, you have complete control over additional LoRaWAN network commands that allow you to customise how your devices communicate to the network. Only for those who really know their way around LoRaWAN!
 * **Application Server** - This is a generic term for “where the LNS sends your device’s data.” This could be anything from your API gateway, custom application, or a full-blown asset tracking solution.
+
+## Helium Network Architecture
+<img src={useBaseUrl("img/large-device-fleet/helium_architecture_simple.png")} title="Helium Network Architecture"/>
+
+
+## LoRaWAN and Blockchain in Helium
+<img src={useBaseUrl("img/large-device-fleet/helium_architecture_simple_2.png")} />
+
+
+
+## LoRaWAN Packet Lifecycle
+
+<img src={useBaseUrl("img/large-device-fleet/Helium_packet_lifecycle.png")} />
+
+
