--- a/docs/large-device-fleet/hotspot-placement-management.mdx
+++ b/docs/large-device-fleet/hotspot-placement-management.mdx
@@ -1,3 +1,8 @@
+---
+id: hotspot-placement-management
+sidebar_label: Hotspots
+---
+
 # Hotspot placement and management
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
