--- a/docs/large-device-fleet/operating-router-lns.mdx
+++ b/docs/large-device-fleet/operating-router-lns.mdx
@@ -1,3 +1,8 @@
+---
+id: operating-router-lns
+sidebar_label: Operating own Router/LNS
+---
+
 # Operating your own instance of Router/LoRaWAN Network Server
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
