--- a/docs/large-device-fleet/device-management.mdx
+++ b/docs/large-device-fleet/device-management.mdx
@@ -2,4 +2,7 @@
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-Your LoRaWAN network server (Router) has some basic device management capabilities that address device’s LoRaWAN functions. To configure other device parameters and application-specific settings, you will most likely need to use device manufacturer’s tools.
+Your Router (LoRaWAN Network Server) has some basic device management
+capabilities that address device’s LoRaWAN features and settings. To configure
+other device parameters and application-specific settings, you will need to use
+device manufacturer’s tools.
