--- a/docs/large-device-fleet/get-started.mdx
+++ b/docs/large-device-fleet/get-started.mdx
@@ -7,7 +7,9 @@ sidebar_label: Getting started
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-* Buy one or more LoRaWAN device
-* Get a Helium hotspot (Optional - only if no [Helium coverage](https://explorer.helium.com/) in your area) 
-* Add your device(s) to the Router - you get free credit for 10,000 packets
-* Send data to your application/dashboard
+- Buy one or more LoRaWAN device
+- Get a Helium hotspot (Optional - only if no
+  [Helium coverage](https://explorer.helium.com/) in your area)
+- Add your device(s) to the [Router](https://console.helium.com/) - you get free
+  credit for 10,000 packets
+- Send data to your application/dashboard
