--- a/docs/large-device-fleet/helium-lorawan-concepts.mdx
+++ b/docs/large-device-fleet/helium-lorawan-concepts.mdx
@@ -7,24 +7,43 @@ sidebar_label: Helium network concepts
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-* **Devices** - Any IoT device supporting the LoRaWAN radio standard will be able to operate on the Helium network. Asset trackers, environmental sensors, smart metres, smart lighting, and many more.
-* **Hotspots** - These are indoor or outdoor radio devices that listen to transmissions from your device or send data to your devices. They also have a copy of the blockchain and run blockchain transactions. Blockchain functionality will be moved completely to the validators in the near future to minimise hardware requirements for the hotspots.
-* **Blockchain** - This is a ledger of all transactions that have taken on the network. It is stored and run on both hotspots and validators.
-* **Validators** - These are servers that run the blockchain to offload computation and storage from the hotspots. In the future, hotspots will not have a copy of the blockchain but will communicate to the validators to perform blockchain transactions.
-* **Helium Router/LoRaWAN Network Server** - Router is equivalent to a LoRaWAN Network Server (LNS). LNS manages low level network communications with devices through hotspots. By running your own LNS, you have complete control over additional LoRaWAN network commands that allow you to customise how your devices communicate to the network. Only for those who really know their way around LoRaWAN!
-* **Application Server** - This is a generic term for “where the LNS sends your device’s data.” This could be anything from your API gateway, custom application, or a full-blown asset tracking solution.
+- **Devices** - Any IoT device supporting the LoRaWAN radio standard will be
+  able to operate on the Helium network. Asset trackers, environmental sensors,
+  smart metres, smart lighting, and many more.
+- **Hotspots** - These are indoor or outdoor radio devices that receive
+  transmissions from your device or send data to your devices. They also have a
+  copy of the blockchain and run blockchain transactions. Blockchain
+  functionality will be removed completely from hotspots to validators in the
+  near future. This will minimise hardware requirements for the hotspots and
+  lower their cost.
+- **Blockchain** - This is a ledger of all transactions that have taken place on
+  the network. It is stored and run on both hotspots and validators.
+- **Validators** - These are servers that run the blockchain to offload
+  computation and storage from the hotspots. In the future, hotspots will not
+  have a copy of the blockchain but will communicate to the validators to
+  perform blockchain transactions.
+- **Helium Router/LoRaWAN Network Server** - Router is equivalent to a LoRaWAN
+  Network Server (LNS). LNS manages low level network communication with devices
+  through hotspots. By running your own LNS, you have complete control over
+  additional LoRaWAN network commands that allow you to customise how your
+  devices communicate to the network.
+- **Application Server** - This is a generic term for “where the LNS sends your
+  devices’ data.” This could be anything from your API gateway, custom
+  application, or a full-blown software solution.
 
 ## Helium Network Architecture
-<img src={useBaseUrl("img/large-device-fleet/helium_architecture_simple.png")} title="Helium Network Architecture"/>
 
+<img
+  src={useBaseUrl("img/large-device-fleet/helium_architecture_simple.png")}
+  title="Helium Network Architecture"
+/>
 
 ## LoRaWAN and Blockchain in Helium
-<img src={useBaseUrl("img/large-device-fleet/helium_architecture_simple_2.png")} />
 
-
+<img
+  src={useBaseUrl("img/large-device-fleet/helium_architecture_simple_2.png")}
+/>
 
 ## LoRaWAN Packet Lifecycle
 
 <img src={useBaseUrl("img/large-device-fleet/Helium_packet_lifecycle.png")} />
-
-
