--- a/docs/large-device-fleet/hotspot-placement-management.mdx
+++ b/docs/large-device-fleet/hotspot-placement-management.mdx
@@ -7,9 +7,23 @@ sidebar_label: Hotspots
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-Different scenarios:
-* **Office** - can be covered by a single hotspot without needing to think about radio waves
-* **Building/large site** - can be covered with a few hotspots with minor consideration of radio wave propagation
-* **Large geographic area** - requires a number of hotspots installed on poles, roofs, buildings or towers. High understanding of radio wave propagation is required.
+Hotspot placement will primarily depend on where your devices are.
 
-Specialised software for managing multiple hotspots is very handy when your business depends on all your hotspots operating perfectly. Perform a web search on available hotspot management tools as new offerings keep coming up.
+Different scenarios:
+
+- **Office** - can be covered by a single hotspot without needing to think about
+  radio waves
+- **Building/large site** - can be covered with a few hotspots with minor
+  consideration of radio wave propagation
+- **Large geographic area** - requires a number of hotspots installed on poles,
+  roofs, buildings or towers. High understanding of radio wave propagation is
+  required.
+
+Capacity of hotspots is very large as they listen on eight different channels
+and LoRaWAN transmissions are very quick. One hotspot can easily handle tens of
+thousands of devices, depending how frequently they are transmitting.
+
+Specialised software for managing multiple hotspots is very handy when your
+business depends on all your hotspots operating perfectly. Perform a web search
+for hotspot management tools to get the latest available tools as new offerings
+keep coming up.
