add doc: Debug With Sniffer

--- a/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
+++ b/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
@@ -18,6 +18,9 @@ running.
 - [buy an OUI](/use-the-network/buy-an-oui)
 - [run Console](/use-the-network/run-console)
 - [deploy Console](/use-the-network/deploy-console)
+- Optionally [debug with sniffer](/use-the-network/debug-with-sniffer)
+  to confirm router runtime behavior using a virtual LoRaWAN device and a
+  software-based protocol sniffer
 
 Before pursuing this configuration though, it is worth considering.
 
