--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -24,6 +24,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
                         <a href="/mine-hnt/hotspot-makers/approved-makers"><span class="badge badge--secondary">Approved Makers</span></a>
                         <a href="/mine-hnt/hotspot-makers/maker-approval-auditing"><span class="badge badge--secondary">Maker Approval</span></a>
                         <a href="/mine-hnt/hotspot-makers/maker-apps"><span class="badge badge--secondary">Maker Apps</span></a>
+                        <a href="/mine-hnt/hotspot-makers/understanding-hotspot-status"><span class="badge badge--secondary">Understanding Hotspot Status</span></a>
                         <a href="/mine-hnt/validators"><span class="badge badge--secondary">Run a Validator</span></a>	
                     </div>
                 </div>
