updated azure and new qr code
updated instructions for azure and new qr code instructions

--- a/docs/use-the-network/console/adding-devices.mdx
+++ b/docs/use-the-network/console/adding-devices.mdx
@@ -55,6 +55,13 @@ as the Activation Method \(only `OTAA` is currently supported\).
   src={useBaseUrl("img/use-the-network/console/console-device-details.png")}
 />
 
+## Scan Device QR Code
+
+The mobile interface provides the ability to scan QR codes that are based on the offical LoRa qr code spec. 
+
+Scanning the code will populate the `DevEUI` and `AppEUI` fields. AppKey will still need to be manually entered. 
+
+
 ## Importing Devices
 Console provides a simple way to batch add multiple devices using a CSV file. 
 
