--- a/docs/use-the-network/console/adding-devices.mdx
+++ b/docs/use-the-network/console/adding-devices.mdx
@@ -57,7 +57,7 @@ as the Activation Method \(only `OTAA` is currently supported\).
 
 ## Scan Device QR Code
 
-The mobile interface provides the ability to scan QR codes that are based on the offical LoRa qr code spec. 
+The mobile interface provides the ability to scan QR codes of sensors that are **based on the LoRaWAN Device Identification QR Codes specification** [here](https://lora-alliance.org/resource_hub/tr005-lorawan-device-identification-qr-codes/).
 
 Scanning the code will populate the `DevEUI` and `AppEUI` fields. AppKey will still need to be manually entered. 
 
