be more technically correct

--- a/docs/mine-hnt/understanding-hotspot-status.mdx
+++ b/docs/mine-hnt/understanding-hotspot-status.mdx
@@ -30,7 +30,7 @@ Blockchain Activity can include:
 * transferred device packets for a device
 * received mining rewards
 
-We're able to make these assumptions because only a **fully synced and online Hotspot** is able to complete the above tasks.
+We're able to make these assumptions because only a **fully synced and online Hotspot** is able to participate in the above activities.
 
 ### Block Height
 A Hotspot's current block height is gossiped over the peer-to-peer network. As the network has grown, it has taken much longer for this information to be updated and available for users to see on explorer.helium.com. This is why sometimes a block sync status can be take days to update. THe best way to quickly get the exact block height is to run a diagnostic report from the Hotspot or Maker app.
