--- a/docs/troubleshooting/network-troubleshooting.mdx
+++ b/docs/troubleshooting/network-troubleshooting.mdx
@@ -25,8 +25,8 @@ Community Discord, #hotspot-setup-help.
 1. Check Your Cables If using Ethernet, make sure your Ethernet cable is
    securely plugged into the Hotspot and your internet provider modem. A
    blinking amber light next to the Ethernet port on the Hotspot means there is
-   a good connection. Cables can also fail from time to time, so trying a
-   different cable can help may also help.
+   a good connection. Enthernet cables can fail from time to time, so trying a
+   different cable may correct your problem.
 
 2. Check Your Internet Connection Confirm that you are able to connect to the
    Internet from your location using your home computer, on the same network. If
