--- a/docs/use-the-network/roaming/roaming.mdx
+++ b/docs/use-the-network/roaming/roaming.mdx
@@ -13,7 +13,7 @@ With over 630K Hotspots in 166 countries and growing, the network sees a massive
 Any compatible device can send data to their home network through Helium-compatible Hotspots without the need for device configurations or firmware updates.
 
 ## Getting Started
-- **Create an Account**- Contact a Helium Network Advisor to create the initial Helium Roaming Services account (sales@helium.com). Initial setup requires an Organization name, and an email address for the administrator.
+- **Create an Account**- Contact a Helium Network Advisor to create the initial Helium Roaming Services account (sales@helium.com). Initial setup requires an Organization name, and an email address for the administrator. As part of the initial account creation process, Net ID ownership must be verified for the roaming partner.
 - **Add Users**- An administrator can add other user accounts with various roles as needed.
 - **Purchase Data Credits**- Data Credits (DCs) are needed to pay for packets sent on the Helium network and can be purchased with a credit card or burning HNT.
 - **Configure Network Integration**- Specify the home network server address and port, input roaming device join credentials, and define how many packets to purchase for devices.
