More copy editing (grammar) fixes.

--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -30,7 +30,7 @@ Hexagons, while also a six-sided shape, is the underlying representation of the 
 
 ## Hexagons in Helium
 
-Since the genesis block, Hotspot locations have been represented (and continue to) in resolution 12, a semi-precise point location covering 300 m² (3200 ft²), comparable to the footprint of a large house. This is why some Hotspot appear to be "a few houses down from where I asserted". But, as the network expanded, concerns over security and privacy regarding Hotspot locations grew alongside with it. 
+Since the genesis block, Hotspot locations have been represented (and continue to) in resolution 12, a semi-precise point location covering 300 m² (3200 ft²), which is comparable to the footprint of a large house. This is why some Hotspots appear to be "a few houses down from where I asserted". But, as the network expanded, concerns over security and privacy regarding Hotspot locations grew alongside it.
 
 
 <img src={useBaseUrl("img/wallets/helium-app/hexagons.png")} width="400"/>
