I keep finding more.

--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -45,7 +45,7 @@ The hex your Hotspot belongs to is derived from its resolution 12 location, and 
 
 ## Resolution 8 Hexagons
 
-The Helium app displays resolution 8 hexagons, which have an area of 0.7373276 km², and edge length of 0.461354684 km. About 130 resolution 8 hexagons covers the city of San Francisco. 
+The Helium app displays resolution 8 hexagons, which have an area of 0.7373276 km², and edge length of 0.461354684 km. About 130 resolution 8 hexagons cover the city of San Francisco. 
 
 :::note
 
