first updates to run-console

--- a/docs/use-the-network/run-a-network-server/deploy-console.mdx
+++ b/docs/use-the-network/run-a-network-server/deploy-console.mdx
@@ -13,7 +13,7 @@ Getting [Console](https://github.com/helium/console) deployed is very similar to
 
 Auth0 requires being run over https. You can get a certificate on your server
 through [Let's Encrypt](https://letsencrypt.org/getting-started/) by following
-(this certbot guide)[https://certbot.eff.org/instructions].
+[this certbot guide](https://certbot.eff.org/instructions).
 
 "My HTTP website is running 'Web Hosting Product' on 'Ubuntu 18.04 LTS
 (bionic)'" Was used when writing this guide. Follow the steps, and note where
