clarify magic link limitations in tutorial

--- a/docs/use-the-network/run-a-network-server/run-console.mdx
+++ b/docs/use-the-network/run-a-network-server/run-console.mdx
@@ -27,7 +27,9 @@ Before we begin, you should have the following:
 - installed Docker and docker-compose (see quick-start for this in the next
 section, "Setting Up Dependencies")
 - you have some spare HNT to burn ($10-100 worth), for funding your OUI address
-- a [Magic Link](https://magic.link/) account for user account management
+- a [Magic Link](https://magic.link/) account for user account management. Note
+that without additional configuration, only login via link will work. Login via
+Google directly will _not_ work.
 - at least 4 vCPUs, 8GB of RAM, and 120 GB of SSD. The [CPX41 product from Hetzner](https://www.hetzner.com/)
 or the [numerous VPS options from Vultr](https://www.vultr.com/pricing/) end up
 being cost-effective solutions. AWS provides equivalents such as t2.xlarge.
