--- a/docs/api/console.mdx
+++ b/docs/api/console.mdx
@@ -778,10 +778,10 @@ _Body Parameters_
 
 ---
 
-### Create a Custom HTTP Integration
+### Create a Custom HTTP Integration (Staging)
 
 ```
-POST https://console.helium.com/api/v1/integrations
+POST https://staging-console.helium.wtf/api/v1/integrations
 ```
 
 Creates a custom HTTP integration. Use the Console UI for JSON message templates.
@@ -831,10 +831,10 @@ _Body Parameters_
 
 ---
 
-### Create a Custom MQTT Integration
+### Create a Custom MQTT Integration (Staging)
 
 ```
-POST https://console.helium.com/api/v1/integrations
+POST https://staging-console.helium.wtf/api/v1/integrations
 ```
 
 Creates a custom MQTT integration. 
@@ -885,10 +885,10 @@ _Body Parameters_
 
 ---
 
-### Create a Custom Azure IoT Hub Integration
+### Create a Custom Azure IoT Hub Integration (staging)
 
 ```
-POST https://console.helium.com/api/v1/integrations
+POST https://staging-console.helium.wtf/api/v1/integrations
 ```
 
 Creates a custom Azure IoT Hub integration. 
@@ -937,10 +937,10 @@ _Body Parameters_
 
 ---
 
-### Create a Custom AWS IoT Core Integration
+### Create a Custom AWS IoT Core Integration (staging)
 
 ```
-POST https://console.helium.com/api/v1/integrations
+POST https://staging-console.helium.wtf/api/v1/integrations
 ```
 
 Creates a custom AWS IoT Core integration. 
